25012022 - bug fix on read all apartments. and new security config.